# ChangeLog for dev-java/maven-bin
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.53 2008/10/25 16:59:57 nixnut Exp $

  25 Mar 2009; Jesse Farinacci <jieryn@gmail.com> +maven-bin-2.1.0.ebuild:
  version bump for maven-2.1.0
