@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/maven-bin-2.0.9.ebuild,v 1.3 2008/10/25 16:59:57 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/maven-bin-2.0.8.ebuild,v 1.6 2008/03/28 22:56:12 maekke Exp $
 
 inherit java-pkg-2
 
@@ -11,8 +11,8 @@ DESCRIPTION="Project Management and Comprehension Tool for Java"
 SRC_URI="mirror://apache/maven/binaries/${MY_P}-bin.tar.bz2"
 HOMEPAGE="http://maven.apache.org/"
 LICENSE="Apache-2.0"
-SLOT="2.1"
-KEYWORDS="~amd64 ~x86"
+SLOT="2.0"
+KEYWORDS="~amd64 ~ppc ~x86"
 
 RDEPEND=">=virtual/jdk-1.4
 	app-admin/eselect-maven"
