@@ -1,6 +1,15 @@
 # ChangeLog for dev-java/maven-bin
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.53 2008/10/25 16:59:57 nixnut Exp $
+
+*maven-bin-2.0.10 (08 May 2009)
+*maven-bin-2.0.9 (08 May 2009)
+*maven-bin-2.0.8 (08 May 2009)
+
+  08 May 2009; Jesse Farinacci <jieryn@gmail.com> +maven-bin-2.0.8.ebuild,
+  +maven-bin-2.0.9.ebuild, +maven-bin-2.0.10.ebuild, maven-bin-2.1.0.ebuild:
+  adding -${SLOT} to the installed mvn binary so that we can exploit
+  app-admin/eselect-maven, related to bug #264027
 
   25 Mar 2009; Jesse Farinacci <jieryn@gmail.com> +maven-bin-2.1.0.ebuild:
   version bump for maven-2.1.0
